<resources>
    <string name="app_name">dami</string>
    <string name="title_main">CasaTech</string>
    <string name="title_secondary">Productos</string>
    <string name="title_third">Producto</string>
    <string name="category_title">Categorias</string>
    <string name="people_title">Personas</string>
    <string name="person_title">Persona</string>
    <string name="Persona_title">Personas</string>
    <string name="category_title_secondary">Categoria</string>
    <string name="agregar">Agregar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="apePat_per">Apellido paterno</string>
    <string name="apeMat_per">Apellido materno</string>
    <string name="correo_per">Correo electronico</string>
    <string name="dir_per">Dirección</string>
    <string name="flagCliente_per">Flag</string>
    <string name="registar">Registrar</string>
    <string name="precio">Precio</string>
    <string name="stokc">Stokc</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="mensaje_siguiente">Por favor, confirmar que quiere ver los productos de la categoria %s </string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensaje_ver_prod">Por favor, confirmar que quiere ver más acerca del producto %s </string>
    <string name="campo_requerido">Campo Requerido</string>
    <string name="cantidad">Cantidad</string>
    <string name="registro_title">Nuevo Registro</string>
</resources>